# ifc-ci

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  workspace.py
.github/workflows/: test.yml
data/: ifc-ci Diagram.drawio  ifc_ci.drawio  test.json
ifc_ci/: main.py  standard_method.py
ifc_ci/law/: base_method.py  standard_method.py  sub_method.py
ifc_ci/sub_method/: 109_6.py
ifc_ci/wrapper/: element.py
