[tool.poetry]
name = "ifc_ci"
version = "0.1.0"
description = ""
authors = ["keitarowatanabe <ktaroabobon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-ifcopenshell = "^1.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
